add responsive behavior to nav

--- a/App/templates/App/prime_form.html
+++ b/App/templates/App/prime_form.html
@@ -1,7 +1,7 @@
 {% extends 'App/base.html' %}
 {% block content %}
 
-
+<div class="container">
 <div class="panel-group">
 
     <div class="panel panel-success">
@@ -24,7 +24,7 @@
 
 </div>
 
- 
+</div>
 
  
 
