--- a/App/templates/App/base.html
+++ b/App/templates/App/base.html
@@ -29,26 +29,34 @@
     <!--  Nav Bar  -->
     <nav class="navbar navbar-default ">
         <div class="container">
-            <ul class="nav navbar-nav">
-                <li><a class="navbar-brand" href="#">Social Service</a></li>
-                <li><a href="{% url 'info' %}">info</a></li>
-                <li><a href="#">contact</a></li>
-                
-            </ul>
 
-            <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                <li><a href="{% url 'prime_new' %}">New prime</a></li>
-                <li><a href="{% url 'prime_list' %}">Mes primes</a></li>
-                <li><a href="#"> Bonjour,{{ user.username }}</a></li>
-                <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Log out </a></li>
-                {% else %}
-                <li><a class="nav navbar-right" href="{% url 'login' %}">  <span class="glyphicon glyphicon-user"></span> Log in</a></li>
-                {% endif %}
-            </ul>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Social Service</a>
+            </div>
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url 'info' %}">info</a></li>
+                    <li><a href="#">contact</a></li> 
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                    <li><a href="{% url 'prime_new' %}">New prime</a></li>
+                    <li><a href="{% url 'prime_list' %}">Mes primes</a></li>
+                    <li><a href="#"> Bonjour,{{ user.username }}</a></li>
+                    <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Log out </a></li>
+                    {% else %}
+                    <li><a class="nav navbar-right" href="{% url 'login' %}">  <span class="glyphicon glyphicon-user"></span> Log in</a></li>
+                    {% endif %}
+                </ul>
+            </div>   
         </div>
-
-
     </nav>
 
     <!--  Content block  -->
@@ -56,6 +64,8 @@
         {% block content %}
         {% endblock %}
     </div>
+    
+
     
 </body>
 </html>
