--- a/App/templates/registration/login.html
+++ b/App/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends 'App/base.html' %}
 
 {% block content %}
-
+<div class="container">
 <div class="panel-group">
 
     <div class="panel panel-success">
@@ -25,7 +25,7 @@
     </div>
 
 </div>
-
+</div>
 
 
 
