--- a/App/templates/App/base.html
+++ b/App/templates/App/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Social Service</title>
     <!--  Bootstarp -->
@@ -13,8 +14,9 @@
     
     <!-- pour les table -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+     <!-- pour les table -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!--  Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/blog.css'%}">
 
@@ -65,7 +67,6 @@
         {% endblock %}
     </div>
     
-
     
 </body>
 </html>
