--- a/App/templates/registration/login.html
+++ b/App/templates/registration/login.html
@@ -2,29 +2,24 @@
 
 {% block content %}
 <div class="container">
-<div class="panel-group">
 
-    <div class="panel panel-success">
-        <div class="panel-heading"><h2>Please Log in : </h2></div>
-    </div>
+    <div class="card">
+        <h5 class="card-header">Log in </h5>
+        <div class="card-body">
+          <h5 class="card-title">Please log in to your account :</h5>
+          {% if form.errors %}
+          <p>  your user name and password didn't match ! please try again .</p>
+          {% endif %}
 
-    <div class="panel panel-success">
-        <div class="panel-body">
-            <h3>(must be a super user , please check with site admin)</h3>
-            {% if form.errors %}
-               <p>  your user name and password didn't match ! please try again .</p>
-            {% endif %}
-
-            <form action="{% url 'login' %}" method="POST">
-                {% csrf_token %}
-                {{form.as_p}}
-                 <input type="submit" class="btn btn-success" value="Login">            
-                 <input type="hidden" name="next" value="{{next}}">
+          <form action="{% url 'login' %}" method="POST">
+            {% csrf_token %}
+            {{form.as_p}}
+                <input type="submit" class="btn btn-outline-primary" value="Login">            
+                <input type="hidden" name="next" value="{{next}}">
             </form>
         </div>
     </div>
 
-</div>
 </div>
 
 
