--- a/App/templates/App/base.html
+++ b/App/templates/App/base.html
@@ -1,72 +1,267 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Social Service</title>
-    <!--  Bootstarp -->
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
-    
-    <!-- pour les table -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-     <!-- pour les table -->
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <!--  Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/blog.css'%}">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <!-- fonts 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-     -->
-     
-</head>
-<body>
+        <!-- ===== CSS ===== -->
+        
+        <title>Social App</title>
+        <style>
+                        /*===== GOOGLE FONTS =====*/
+            @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 
-    <!--  Nav Bar  -->
-    <nav class="navbar navbar-default ">
-        <div class="container">
+            /*===== VARIABLES CSS =====*/
+            :root{
+            --nav-width: 92px;
 
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Social Service</a>
-            </div>
+            /*===== Colores =====*/
+            --first-color: #0C5DF4;
+            --bg-color: #12192C;
+            --sub-color: #B6CEFC;
+            --white-color: #FFF;
+            
+            /*===== Fuente y tipografia =====*/
+            --body-font: 'Poppins', sans-serif;
+            --normal-font-size: 1rem;
+            --small-font-size: .875rem;
+            
+            /*===== z index =====*/
+            --z-fixed: 100;
+            }
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="{% url 'info' %}">info</a></li>
-                    <li><a href="#">contact</a></li> 
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    {% if user.is_authenticated %}
-                    <li><a href="{% url 'prime_new' %}">New prime</a></li>
-                    <li><a href="{% url 'prime_list' %}">Mes primes</a></li>
-                    <li><a href="#"> Bonjour,{{ user.username }}</a></li>
-                    <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Log out </a></li>
-                    {% else %}
-                    <li><a class="nav navbar-right" href="{% url 'login' %}">  <span class="glyphicon glyphicon-user"></span> Log in</a></li>
-                    {% endif %}
-                </ul>
-            </div>   
+
+            /*===== BASE =====*/
+            *,::before,::after{
+            box-sizing: border-box;
+            }
+            body{
+            position: relative;
+            margin: 0;
+            padding: 2rem 0 0 6.75rem;
+            font-family: var(--body-font);
+            font-size: var(--normal-font-size);
+            transition: .5s;
+            }
+            h1{
+            margin: 0;
+            }
+            ul{
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            }
+            a{
+            text-decoration: none;
+            }
+
+            /*===== l NAV =====*/
+            .l-navbar{
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: var(--nav-width);
+            height: 100vh;
+            background-color: var(--bg-color);
+            color: var(--white-color);
+            padding: 1.5rem 1.5rem 2rem;
+            transition: .5s;
+            z-index: var(--z-fixed);
+            }
+
+            /*===== NAV =====*/
+            .nav{
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            overflow: hidden;
+            }
+            .nav__brand{
+            display: grid;
+            grid-template-columns: max-content max-content;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 2rem;
+            }
+            .nav__toggle{
+            font-size: 1.25rem;
+            padding: .75rem;
+            cursor: pointer;
+            }
+            .nav__logo{
+            color: var(--white-color);
+            font-weight: 600;
+            }
+
+            .nav__link{
+            display: grid;
+            grid-template-columns: max-content max-content;
+            align-items: center;
+            column-gap: .75rem;
+            padding: .75rem;
+            color: var(--white-color);
+            border-radius: .5rem;
+            margin-bottom: 1rem;
+            transition: .3s;
+            cursor: pointer;
+            }
+            .nav__link:hover{
+            background-color: var(--first-color);
+            }
+            .nav__icon{
+            font-size: 1.25rem;
+            }
+            .nav__name{
+            font-size: var(--small-font-size);
+            }
+
+            /*Expander menu*/
+            .expander{
+            width: calc(var(--nav-width) + 9.25rem);
+            }
+
+            /*Add padding body*/
+            .body-pd{
+            padding: 2rem 0 0 16rem;
+            }
+
+            /*Active links menu*/
+            .active{
+            background-color: var(--first-color);
+            }
+
+            /*===== COLLAPSE =====*/
+            .collapse{
+            grid-template-columns: 20px max-content 1fr;
+            }
+            .collapse__link{
+            justify-self: flex-end;
+            transition: .5s;
+            }
+            .collapse__menu{
+            display: none;
+            padding: .75rem 2.25rem;
+            }
+            .collapse__sublink{
+            color: var(--sub-color);
+            font-size: var(--small-font-size);
+            }
+            .collapse__sublink:hover{
+            color: var(--white-color);
+            }
+
+            /*Show collapse*/
+            .showCollapse{
+            display: block;
+            }
+
+            /*Rotate icon*/
+            .rotate{
+            transform: rotate(180deg);
+            }
+
+        </style>
+        
+    </head>
+    <body id="body-pd">
+        {% if user.is_authenticated %}
+        <div class="l-navbar" id="navbar">
+            
+            <nav class="nav">
+                <div>
+                    <div class="nav__brand">
+                        <ion-icon name="menu-outline" class="nav__toggle" id="nav-toggle"></ion-icon>
+                        <a href="#" class="nav__logo">Social Service</a>
+                    </div>
+                    <div class="nav__list">
+                        <a href="{% url 'prime_list' %}" class="nav__link active">
+                            <ion-icon name="home-outline" class="nav__icon"></ion-icon>
+                            <span class="nav__name">Mes Primes</span>
+                        </a>
+                        <a href="{% url 'prime_new' %}" class="nav__link">
+                            <ion-icon name="chatbubbles-outline" class="nav__icon"></ion-icon>
+                            <span class="nav__name">Nouvelle Prime</span>
+                        </a>
+
+                       
+                        <a href="{% url 'info' %}" class="nav__link">
+                            <ion-icon name="pie-chart-outline" class="nav__icon"></ion-icon>
+                            <span class="nav__name">info</span>
+                        </a>
+                        <a href="#" class="nav__link">
+                            <ion-icon name="settings-outline" class="nav__icon"></ion-icon>
+                            <span class="nav__name">Contact</span>
+                        </a>
+                    </div>
+                </div>
+
+                <a href="{% url 'logout' %}" class="nav__link">
+                    <ion-icon name="log-out-outline" class="nav__icon"></ion-icon>
+                    <span class="nav__name">Log Out</span>
+                </a>
+            </nav>
+            
         </div>
-    </nav>
+        {% endif %}
 
-    <!--  Content block  -->
-    <div class="container">
-        {% block content %}
-        {% endblock %}
-    </div>
-    
-    
-</body>
+       <!--  Content block  -->
+       <div class="container">
+          {% block content %}
+          {% endblock %}
+       </div>
+        <!-- ===== IONICONS ===== -->
+        <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+        
+        <!-- ===== MAIN JS ===== -->
+        <script src="assets/js/main.js"></script>
+        <script>
+            /*===== EXPANDER MENU  =====*/ 
+                const showMenu = (toggleId, navbarId, bodyId)=>{
+                const toggle = document.getElementById(toggleId),
+                navbar = document.getElementById(navbarId),
+                bodypadding = document.getElementById(bodyId)
+
+                if(toggle && navbar){
+                    toggle.addEventListener('click', ()=>{
+                    navbar.classList.toggle('expander')
+
+                    bodypadding.classList.toggle('body-pd')
+                    })
+                }
+                }
+                showMenu('nav-toggle','navbar','body-pd')
+
+                /*===== LINK ACTIVE  =====*/ 
+                const linkColor = document.querySelectorAll('.nav__link')
+                function colorLink(){
+                linkColor.forEach(l=> l.classList.remove('active'))
+                this.classList.add('active')
+                }
+                linkColor.forEach(l=> l.addEventListener('click', colorLink))
+
+
+                /*===== COLLAPSE MENU  =====*/ 
+                const linkCollapse = document.getElementsByClassName('collapse__link')
+                var i
+
+                for(i=0;i<linkCollapse.length;i++){
+                linkCollapse[i].addEventListener('click', function(){
+                    const collapseMenu = this.nextElementSibling
+                    collapseMenu.classList.toggle('showCollapse')
+
+                    const rotate = collapseMenu.previousElementSibling
+                    rotate.classList.toggle('rotate')
+                })
+                }
+
+
+
+        </script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    </body>
 </html>
