set up profile models

--- a/App/templates/App/base.html
+++ b/App/templates/App/base.html
@@ -6,7 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-        <!-- ===== CSS ===== -->
+         <!-- =======BOX ICONS====== -->
+         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'> 
+        <!-- =====pour les tables ===== -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         
         <title>Social App</title>
         <style>
@@ -110,6 +114,8 @@
             }
             .nav__link:hover{
             background-color: var(--first-color);
+            color:var(--white-color) ;
+            text-decoration: none;
             }
             .nav__icon{
             font-size: 1.25rem;
@@ -162,6 +168,10 @@
             .rotate{
             transform: rotate(180deg);
             }
+            .register{
+                float: right;
+            }
+           
 
         </style>
         
